Add ability to permanently hide apps from recents [3/3]
Change-Id: Ifdf907466463608a3caab92370905c1491dbeadb

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -133,8 +133,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="org.aospextended.extensions.HAFRAppListActivity" />
+
         <activity android:name=".Settings$AicpExtras"
             android:label="@string/header_category_aicpextras">
+
             <intent-filter android:priority="4">
                 <action android:name="com.android.settings.category.aicpextras" />
                 <category android:name="android.intent.category.DEFAULT" />
