--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3311,6 +3311,12 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name="com.android.settings.aicp.util.OnBoot">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <activity android:name=".applications.ProtectedAppsActivity"
                   android:label="@string/protected_apps"
                   android:excludeFromRecents="true"
