--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3055,6 +3055,18 @@
                 android:value="com.android.settings.aicp.PulseSettings" />
         </activity>
 
+        <!-- Ambient settings activity. -->
+        <activity android:name="Settings$AmbientSettingsActivity"
+                android:label="@string/doze_settings"
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.aicp.AmbientSettings" />
+        </activity>
+
        <!-- System action picker -->
         <activity android:name="com.android.settings.aicp.utils.ActionPickerDialogActivity"
                 android:theme="@*android:style/Theme.Material.Light.Dialog.Alert"
