--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2993,6 +2993,27 @@
                 android:resource="@string/wifi_calling_suggestion_summary" />
         </activity>
 
+        <!-- SuperSU activity. -->
+        <activity android:name="Settings$SuperSUActivity"
+                android:label="@string/supersu_title"
+                android:icon="@drawable/ic_settings_supersu"
+                android:taskAffinity="" >
+            <intent-filter android:priority="4">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="9">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.aicpextras" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.SuperSU" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/supersu_dashboard_summary" />
+        </activity>
+
         <!-- Global DUI settings activity. -->
         <activity android:name="Settings$NavigationSettingsActivity"
             android:label="@string/navigation_category"
