move privacy guard and gesture settings to aicp extras
Change-Id: Ie88acf1603283b4e7e2a4b2bd81740854f19b0c4

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1349,6 +1349,8 @@
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
                 <category android:name="com.android.settings.SHORTCUT" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.aicpextras" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.applications.AppOpsSummary" />
         </activity>
@@ -3252,7 +3254,7 @@
                 <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                       android:value="com.android.settings.category.device" />
+                       android:value="com.android.settings.category.aicpextras" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                        android:value="com.android.settings.gestures.GestureSettings" />
             <meta-data android:name="com.android.settings.summary"
